<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">GpsWayPoints</string>
    <string name="app_copyright" translatable="false">&#169; 2024&#8211;2026 by Martin Gäckler</string>
    <string name="app_url" translatable="false">https://www.gaeckler.at/</string>

	<string name="welcome">Welcome</string>

    <string name="location">Location</string>
    <string name="savePos">Save Location</string>
    <string name="savePosAs">Save Location with Name &#8230;</string>

    <string name="waypoint">Waypoint</string>
    <string name="saveHomeAs">Save Home with Name &#8230;</string>
    <string name="loadPos">Load Waypoint &#8230;</string>
    <string name="showPos">Show Waypoint &#8230;</string>
    <string name="deletePos">Delete Waypoint &#8230;</string>

    <string name="gpsSpeed">GPS Interval</string>
    <string name="gpsSpeedAuto">Automatic</string>

	<string name="trackGps">Track GPS</string>
    <string name="saveWPT">Save GPX Waypoints</string>
    <string name="loadWPT">Load Waypoint File</string>

    <string name="calibration">Calibration</string>
    <string name="darkMode">Dark Mode</string>

    <string name="about">About GpsWayPoints &#8230;</string>
    <string name="exit">Exit</string>
    
    <string name="statusLabel">State</string>
    <string name="altitudeLabel">Height</string>
    
    <string name="nameLabel" translatable="false">Name</string>
    <string name="longitudeLabel">Longitude</string>
    <string name="latitudeLabel">Latitude</string>

    <string name="confirmDelete">"Do you want to delete %s?"</string>
    <string name="itemsSaved">%1$d items saved to %2$s</string>
    <string name="itemsLoaded">%1$d items loaded from %2$s</string>

    <string name="invalidRange1">Invalid value for %s</string>
    <string name="invalidRange3">Invalid value for %1$s [%2$d,%3$d]</string>
    <string name="unknown">Unknown</string>
    <string name="okLabel" translatable="false">OK</string>
    <string name="cancelLabel">Cancel</string>
    <string name="gpsEnabled">GPS is enabled.</string>
    <string name="gpsDisabled">GPS is disabled.</string>
    <string name="gpsStarted">GPS started</string>
    <string name="gpsStoped">GPS stoped</string>
    <string name="gpsFirstFix">GPS first fix</string>
    <string name="gpsSatellites2">GPS satellites: %1$d/%2$d</string>

    <string name="selectWayPoint">Select a Waypoint:</string>
    <string name="loadWayPoint">Load Waypoint</string>
    <string name="deleteWayPoint">Delete Waypoint</string>

    <string name="accuracy_format">%1$s Accuracy: %2$.3fm %3$d/%4$d</string>

	<string name="error">Error</string>
    <string name="fileNotFound">File Not Found</string>

    <string name="enterName">Enter a Name:</string>

    <string name="setup">Setup</string>
    <string name="selectPublicFolder">Document Folder</string>
    <string name="selectStorageFolder">GPX Folder</string>
	<string name="displayStorageManagePermission">Storage Manager</string>
    <string name="mapLabel">Map</string>
    <string name="followPos">Follow Position</string>
    <string name="extendedGPS">Extended Locations</string>
    <string name="notification">Notification</string>

    <string name="notificationMsg">GPS Receiver Active</string>
    <string name="gpsTrackMsg">GPS Track Recording Active</string>
</resources>
