<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:visible="true" android:title="@string/savePos" android:id="@+id/savePos" android:checkable="false" android:checked="false" android:enabled="true"/>
	<item android:visible="true" android:title="@string/savePosAs" android:id="@+id/savePosAs" android:checkable="false" android:checked="false" android:enabled="true"/>
	<item android:visible="true" android:title="@string/trackGps" android:id="@+id/trackGps" android:checkable="true" android:checked="false" android:enabled="true"/>
	<item android:visible="true" android:title="@string/saveHomeAs" android:id="@+id/saveHomeAs" android:checkable="false" android:checked="false" android:enabled="true"/>
	<item android:visible="true" android:title="@string/loadPos" android:id="@+id/loadPos" android:checkable="false" android:checked="false" android:enabled="true"/>
	<item android:visible="true" android:title="@string/deletePos" android:id="@+id/deletePos" android:checkable="false" android:checked="false" android:enabled="true"/>

    <item android:visible="true" android:title="@string/gpsSpeed" android:id="@+id/gpsSpeed" android:checkable="false" android:checked="false" android:enabled="true">
        <menu>
    		<item android:visible="true" android:title="@string/gpsSpeedAuto" android:id="@+id/autoGps" android:checkable="true" android:checked="false" android:enabled="true"/>
    		<item android:visible="true" android:title="10 Hz" android:id="@+id/fastGps" android:checkable="true" android:checked="false" android:enabled="true"/>
    		<item android:visible="true" android:title="1 Hz" android:id="@+id/normalGps" android:checkable="true" android:checked="false" android:enabled="true"/>
    		<item android:visible="true" android:title="0.1 Hz" android:id="@+id/slowGps" android:checkable="true" android:checked="false" android:enabled="true"/>
    	</menu>
    </item>

	<item android:visible="true" android:title="@string/setup" android:checkable="false" android:checked="false" android:enabled="true">
		<menu>
			<item android:visible="true" android:title="@string/selectPublicFolder" android:id="@+id/selectPublicFolder" android:checkable="true" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/selectStorageFolder" android:id="@+id/selectStorageFolder" android:checkable="true" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/saveWPT" android:id="@+id/saveWPT" android:checkable="false" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/loadWPT" android:id="@+id/loadWPT" android:checkable="false" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/calibration" android:id="@+id/calibration" android:checkable="true" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/darkMode" android:id="@+id/darkMode" android:checkable="true" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/mapLabel" android:id="@+id/mapLabel" android:checkable="true" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/followPos" android:id="@+id/followPos" android:checkable="true" android:checked="false" android:enabled="true"/>
			<item android:visible="true" android:title="@string/displayStorageManagePermission" android:id="@+id/displayStorageManagePermission" android:checkable="true" android:checked="false" android:enabled="true"/>
		</menu>
	</item>

    <item android:visible="true" android:title="@string/about" android:id="@+id/about" android:checkable="false" android:checked="false" android:enabled="true"/>
	<item android:visible="true" android:title="@string/exit" android:id="@+id/exit" android:checkable="false" android:checked="false" android:enabled="true"/>
</menu>
