<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:fitsSystemWindows="true"
    >

	<TextView
	    android:id="@+id/statusView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/statusLabel" />
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:id="@+id/altitudeView"
	    android:textSize="20sp"
	    android:text="@string/altitudeLabel"/>
	
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:id="@+id/waypointNameView"
	    android:textSize="20sp"
	    android:text="@string/nameLabel"/>
	
	<at.gaeckler.GpsWayPoints.GpsWayPointsWidget
	    android:id="@+id/myRose"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
    	android:background="#FFFFFF"
	/>
	
</LinearLayout>
